Recipe List and Shopping List Added to Database and tests