@@ -7,12 +7,12 @@ import com.ania.cookbook.web.recipe.ReadRecipeResponse;
 import com.ania.cookbook.web.recipe.RecipeListRequest;
 import com.ania.cookbook.web.recipe.RecipeListResponse;
 import lombok.RequiredArgsConstructor;
+import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/lists")
@@ -22,42 +22,32 @@ public class RecipeListController {
 
     @PostMapping
     public ResponseEntity<Void> createRecipeList(@RequestBody RecipeListRequest request) {
-        recipeManagementService.createRecipeList(new ListName(request.getListName()));
-        return ResponseEntity.ok().build();
+            recipeManagementService.createRecipeList(new ListName(request.getListName()));
+        return ResponseEntity.status(HttpStatus.CREATED).build();
     }
 
     @PostMapping("/{listName}/recipes")
     public ResponseEntity<Void> addRecipeToList(@PathVariable String listName, @RequestBody RecipeListRequest request) {
-        UUID recipeId = request.getRecipeId();
-        recipeManagementService.addRecipeToList(recipeId, new ListName(listName));
-        return ResponseEntity.ok().build();
-    }
-
-
-    @PostMapping("/{listName}/save")
-    public ResponseEntity<Void> saveRecipesList(@PathVariable String listName) {
-        recipeManagementService.saveRecipesList(new ListName(listName));
-        return ResponseEntity.ok().build();
+        recipeManagementService.addRecipeToList(request.getRecipeId(), new ListName(listName));
+        return ResponseEntity.status(HttpStatus.CREATED).build();
     }
 
     @GetMapping("")
     public ResponseEntity<List<String>> getAllLists() {
-        List<ListName> all = recipeManagementService.getAllLists();
-        List<String> names = all.stream()
+        List<String> names = recipeManagementService.getAllLists().stream()
                 .map(ListName::name)
-                .collect(Collectors.toList());
+                .toList();
         return ResponseEntity.ok(names);
     }
 
     @GetMapping("/{listName}")
     public ResponseEntity<RecipeListResponse> getRecipesList(@PathVariable String listName) {
-        ListName searchedListName = new ListName(listName);
-        List<Recipe> recipes = recipeManagementService.getRecipesList(searchedListName);
+        List<Recipe> recipes = recipeManagementService.getRecipesList(new ListName(listName));
         List<ReadRecipeResponse> recipeResponses = recipes.stream()
                 .map(ReadRecipeResponse::from)
-                .collect(Collectors.toList());
+                .toList();
         RecipeListResponse response = RecipeListResponse.builder()
-                .listName(searchedListName)
+                .listName(new ListName(listName))
                 .recipes(recipeResponses)
                 .build();
         return ResponseEntity.ok(response);
@@ -66,7 +56,7 @@ public class RecipeListController {
     @DeleteMapping("/{listName}/recipes/{recipeId}")
     public ResponseEntity<Void> removeRecipeFromList(@PathVariable String listName, @PathVariable UUID recipeId) {
         recipeManagementService.removeRecipeFromList(recipeId, new ListName(listName));
-        return ResponseEntity.ok().build();
+        return ResponseEntity.noContent().build();
     }
 
     @DeleteMapping("/{listName}/clear")
@@ -78,7 +68,7 @@ public class RecipeListController {
     @DeleteMapping("/{listName}")
     public ResponseEntity<Void> deleteRecipeList(@PathVariable String listName) {
         recipeManagementService.deleteRecipeList(new ListName(listName));
-        return ResponseEntity.ok().build();
+        return ResponseEntity.noContent().build();
     }
 
     @GetMapping("/{listName}/shopping")
